fixed navbar margin issue so it only applies to contact page

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,9 +2,9 @@ nav.navbar.navbar-default {
     margin-bottom: 0;
 }
 
-.navbar {
+/* .navbar {
   margin-bottom: 20px
-}
+} */
 
 .navbar-brand {
 padding: 20px;
