--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -1,3 +1,12 @@
+h1 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: bolder
+}
+
+h5, h3, p, a, label, input, button {
+    font-family: 'Raleway', sans-serif;
+}
+
 img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
