--- a/src/components/pages/Recordings/Recordings.css
+++ b/src/components/pages/Recordings/Recordings.css
@@ -1,7 +1,11 @@
 .carousel-item {
     width: 750px;
-    height: auto;
-    align-self: center;
+    height: auto; 
+    margin: auto;
+}
+
+.p, .h3 {
+    font-family: 'Raleway', sans-serif;
 }
 
 #recording-text {
