--- a/src/components/pages/Recordings/Recordings.css
+++ b/src/components/pages/Recordings/Recordings.css
@@ -1,8 +1,15 @@
-.carousel-item {
+/* .carousel-item {
     width: 750px;
     height: auto; 
     margin: auto;
-}
+} */
+
+.carousel-item {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 
 .p, .h3 {
     font-family: 'Raleway', sans-serif;
