--- a/src/components/pages/About/About.css
+++ b/src/components/pages/About/About.css
@@ -6,3 +6,9 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.card {
+    margin: 20px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
