--- a/src/components/pages/Recordings/Recordings.css
+++ b/src/components/pages/Recordings/Recordings.css
@@ -4,11 +4,17 @@
     margin: auto;
 } */
 
-.carousel-item {
+/* .carousel-item {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+  } */
+
+  .carousel-item {
+      width: 60%;
+      margin: auto;
+      float: none
   }
 
 .p, .h3 {
