finished adding, timestamping, and styling links

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,7 @@ nav.navbar.navbar-default {
 li, a {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
+  text-shadow: none
 }
 
 .navbar-brand {
