--- a/src/components/pages/Recordings/Recordings.css
+++ b/src/components/pages/Recordings/Recordings.css
@@ -8,7 +8,10 @@
     font-family: 'Raleway', sans-serif;
 }
 
-#recording-text {
+#recording-text, #recording-link {
         text-shadow: 2px 2px 5px black;     
 }
 
+a {
+    color: white
+}
