--- a/src/components/pages/Contact/Contact.css
+++ b/src/components/pages/Contact/Contact.css
@@ -3,7 +3,7 @@ body {
     background-color: #cccccc;
     height: 100%;
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
 }
 
