added seamless background

--- a/src/components/pages/Contact/Contact.css
+++ b/src/components/pages/Contact/Contact.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://a1industrialtrucks.co.uk/wp-content/uploads/2018/11/webplunder-background-image-technology-online-website-solutions-1024x560.jpg");
+    background-image: url("https://www.designbolts.com/wp-content/uploads/2013/02/crafted-paper-pattern-Grey-Seamless-Pattern-For-Website-Background.jpg");
     background-color: #cccccc;
     height: 100%;
     background-position: center;
